20-07-26 Major Chances and additions - Staff Clockin, Finance, HR, Setup, GEOFencing plus more