@@ -18,7 +18,9 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -36,41 +38,55 @@ public class DesignationService implements DesignationServiceInterface {
     @Override
     public Optional<List<Optional<DesignationResponse>>> createDesignation(DesignationRequest designationRequest) {
         Institution inst = InstitutionUtils.institutionGlobalList.stream()
-         .filter(i -> i.getBececode().equalsIgnoreCase(designationRequest.getInstitutionBECECode())).findFirst().get();
-        Department department=inst.getDepartmentList().stream()
-                .filter(dep -> dep.getIdDepartment().toString().equalsIgnoreCase(designationRequest.getDepartmentId())).findFirst().get();
-        List<Designation>des=department.getDesignationList();
+                .filter(i -> i.getBececode().equalsIgnoreCase(designationRequest.getInstitutionBECECode()))
+                .findFirst()
+                .orElseThrow(() -> new RuntimeException("Institution not found"));
+
+        Department department = inst.getDepartmentList().stream()
+                .filter(dep -> dep.getIdDepartment().toString().equalsIgnoreCase(designationRequest.getDepartmentId()))
+                .findFirst()
+                .orElseThrow(() -> new RuntimeException("Department not found"));
+
+        // IMPORTANT: Create a mutable copy of the designation list
+        List<Designation> des = new ArrayList<>(department.getDesignationList());
 
         List<DesignationRequestDetails> requestDetails = designationRequest.getDesignationRequestDetails();
 
         // Build a map of existing Designations for quick lookup by code
-        var designationMap = des.stream()
+        Map<String, Designation> designationMap = des.stream()
                 .collect(Collectors.toMap(
                         Designation::getCode,
                         designation -> designation,
-                        (existing, replacement) -> {
-                            return existing; // Keeps the first occurrence
-                        }
+                        (existing, replacement) -> existing // Keeps the first occurrence
                 ));
 
         // Iterate through the requestDetails and handle replacements
         requestDetails.forEach(reqDetail -> {
-            var matchingDesignation = designationMap.get(reqDetail.getCode());
             if (designationMap.containsKey(reqDetail.getCode())) {
-                // Update existing designation if a match is found
-                des.set(des.indexOf(matchingDesignation), DesignationUtil.mapDesignationRequest_ToDesignation(reqDetail, matchingDesignation));
-                department.setDesignationList(des);
+                // Update existing designation
+                Designation existingDesignation = designationMap.get(reqDetail.getCode());
+                Designation updatedDesignation = DesignationUtil.mapDesignationRequest_ToDesignation(reqDetail, existingDesignation);
+                int index = des.indexOf(existingDesignation);
+                des.set(index, updatedDesignation);
             } else {
-                des.addAll(designationRequest.getDesignationRequestDetails().stream()
-                        .map(DesignationUtil::mapDesignationRequest_ToDesignation).toList());
-                department.setDesignationList(des);
+                // Create new designations from request details
+                List<Designation> newDesignations = designationRequest.getDesignationRequestDetails().stream()
+                        .map(DesignationUtil::mapDesignationRequest_ToDesignation)
+                        .collect(Collectors.toList()); // ← Use toList() which returns mutable list
+
+                des.addAll(newDesignations);
             }
+
+            // Save after each update
+            department.setDesignationList(des);
             departmentRepository.save(department);
         });
 
-        return Optional.of(inst.getDepartmentList() .stream()
+        // Return response
+        return Optional.of(inst.getDepartmentList().stream()
                 .flatMap(dep -> dep.getDesignationList().stream())
-                .map(DesignationUtil::mapDesignation_ToDesignationResponse).toList());
+                .map(DesignationUtil::mapDesignation_ToDesignationResponse)
+                .collect(Collectors.toList()));
     }
 
     @Override
@@ -86,11 +102,12 @@ public class DesignationService implements DesignationServiceInterface {
                                 .toList());
         return desList;
     }
+
     @Override
     public Optional<List<List<Optional<DesignationResponse>>>> getAllDesignationByInstitutionX(DesignationRequest designationRequest) {
-        Optional<List<List<Optional<DesignationResponse>>>> desList =  Optional.of(InstitutionUtils.institutionGlobalList.stream()
-                .filter(i->i.getBececode().equalsIgnoreCase(designationRequest.getInstitutionBECECode())).findFirst().get()
-                .getDepartmentList().stream().map(dl->dl.getDesignationList().stream()
+        Optional<List<List<Optional<DesignationResponse>>>> desList = Optional.of(InstitutionUtils.institutionGlobalList.stream()
+                .filter(i -> i.getBececode().equalsIgnoreCase(designationRequest.getInstitutionBECECode())).findFirst().get()
+                .getDepartmentList().stream().map(dl -> dl.getDesignationList().stream()
                         .map(DesignationUtil::mapDesignation_ToDesignationResponse).toList())
                 .toList());
         return desList;
